feat(footer): add footer section with contact cards and responsive styles
Add a new footer section to the homepage with three contact information cards
including email, phone, and location details. Implement responsive design
adjustments for different screen sizes.

--- a/html/index.html
+++ b/html/index.html
@@ -92,7 +92,6 @@
                         <span class="emoji">😊</span>
                         <span>WHAT DO YOU FEEL LIKE EATING TODAY?</span>
                     </div>
-                </div>
             </div>
         </div>
         
@@ -407,6 +406,48 @@
         <div class="banner banner-2">
             <div class="banner-content">
                 <span>THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • THEY'LL GHOST YOUR DIET. TACOS THAT DON'T JUDGE YOUR 2AM CRAVINGS • </span>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer-section">
+        <div class="footer-container">
+            <div class="footer-header">
+                <h2 class="footer-title">NO NAPKINS? THAT'S A FLEX.<br>WELCOME TO FLAVOR TOWN!</h2>
+            </div>
+            <div class="footer-cards">
+                <div class="footer-card">
+                    <div class="card-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                        </svg>
+                    </div>
+                    <h3 class="card-title">OUR EMAIL ADDRESS</h3>
+                    <p class="card-subtitle">We're ready to assist you!</p>
+                    <p class="card-info">INFO@ELEMENTRA.COM</p>
+                </div>
+                <div class="footer-card">
+                    <div class="card-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                        </svg>
+                    </div>
+                    <h3 class="card-title">CALL US</h3>
+                    <p class="card-subtitle">Mon – Fri from 8am to 18pm</p>
+                    <p class="card-info">+1 840 841 25 69</p>
+                </div>
+                <div class="footer-card">
+                    <div class="card-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                        </svg>
+                    </div>
+                    <h3 class="card-title">VISIT US</h3>
+                    <p class="card-subtitle">Visit our creative agency today!</p>
+                    <p class="card-info">VIEW ON GOOGLE MAPS</p>
+                </div>
             </div>
         </div>
     </div>
