refactor(styles): update menu section styles and fix positioning
- Rename menu-section to menu-section-2 for better specificity
- Add white background to menu-section
- Update text alignment and color styles for menu-section-2
- Adjust hero title positioning and color

--- a/html/index.html
+++ b/html/index.html
@@ -289,7 +289,7 @@
     </div>
 
     <!-- Menu Section 2 -->
-    <div class="menu-section">
+    <div class="menu-section-2">
         <div class="menu-container">
             <div class="menu-header">
                 <div class="menu-badge">NO WHITE TABLECLOTHS, NO WAITING - JUST</div>
