feat(homepage): add scrolling banners and square images section
Add animated scrolling text banners with humorous food-related messages and a new section with side-by-side square images. Includes responsive styling for mobile devices.

Remove old unused index.html and style.css files from the old directory.

--- a/html/index.html
+++ b/html/index.html
@@ -396,6 +396,33 @@
         </div>
     </div>
 
+    <!-- Scrolling Text Banners -->
+    <div class="scrolling-banners">
+        <div class="banner banner-1">
+            <div class="banner-content">
+                <span>TACOS THAT DON'T JUDGE YOUR 2 AM DECISIONS&nbsp;&nbsp;&nbsp;&nbsp;TACOS THAT DON'T JUDGE YOUR 2 AM DECISIONS&nbsp;&nbsp;&nbsp;&nbsp;TACOS THAT DON'T JUDGE YOUR 2 AM DECISIONS</span>
+            </div>
+        </div>
+        
+        <div class="banner banner-2">
+            <div class="banner-content">
+                <span>BURGERS SO GOOD, THEY'LL GHOST YOUR DIET&nbsp;&nbsp;&nbsp;&nbsp;BURGERS SO GOOD, THEY'LL GHOST YOUR DIET&nbsp;&nbsp;&nbsp;&nbsp;BURGERS SO GOOD, THEY'LL GHOST YOUR DIET</span>
+            </div>
+        </div>
+    </div>
+
+    <!-- Two Square Side-by-Side Images -->
+    <div class="square-images-section">
+        <div class="square-images-container">
+            <div class="square-image-card">
+                <img src="../assets/home_hamburger.jpg" alt="Juicy Burger">
+            </div>
+            <div class="square-image-card">
+                <img src="../assets/home_hamburger.jpg" alt="Chicken Nuggets">
+            </div>
+        </div>
+    </div>
+
     <!-- Flavor Town Communication Block -->
     <div class="flavor-town-section">
         <div class="flavor-town-container">
