--- a/html/index.html
+++ b/html/index.html
@@ -293,7 +293,7 @@
         <div class="menu-container">
             <div class="menu-header">
                 <div class="menu-badge">NO WHITE TABLECLOTHS, NO WAITING - JUST</div>
-                <h2 class="menu-title">UNAPOLOGETICALLY DELICIOUS FOOD THAT HITS THE SPOT EVERY TIME.</h2>
+                <h2 class="menu-title">UNAPOLOGETICALLY DELICIOUS FOOD <span style="color: white;">THAT HITS</span><br><span style="color: white;">THE SPOT EVERY TIME.</span></h2>
             </div>
             <div class="menu-description-container">
                 <p class="menu-description">Enjoy gourmet burgers starting at just $8, healthy salads from $7, and our signature milkshakes for $5. We also offer combo deals for families, ensuring everyone can enjoy a satisfying meal without breaking the bank.</p>
