fix(ticker): adjust animation speed and content for better visibility
Update ticker animation duration from 60s to 20s and modify content to only display pizza items. Adjust spacing and width to ensure proper visibility and smooth scrolling.

--- a/html/index.html
+++ b/html/index.html
@@ -100,13 +100,53 @@
             <div class="ticker">
                 <div class="ticker-content">
                     <span>🍕 PIZZA</span>
-                    <span>🌭 HOT DOGS</span>
-                    <span>🥗 SALADS</span>
-                    <span>🥤 DRINKS</span>
-                    <span>🍰 DESSERTS</span>
-                    <span>🌯 TORTILLAS</span>
-                    <span>🥙 SHAWARMA</span>
-                    <span>🍔 BURGERS</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
+                    <span>🍕 PIZZA</span>
                 </div>
             </div>
         </div>
