feat: restructure project files and add package configuration
- Move html/index.html to root as index.html
- Move script/script.js to js/script.js
- Add package.json with project configuration
- Add .gitignore file
- Add README.md with project documentation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elementra - Fast Food</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="logo">
-                            <img src="../assets/logo-white-retina.png" alt="Elementra">
+                            <img src="./assets/logo-white-retina.png" alt="Elementra">
                         </div>
                         <div class="menu-social-container">
                             <div class="menu">
@@ -174,14 +174,14 @@
                 </div>
                 <div class="image-container">
                     <div class="burger-image">
-                        <img src="../assets/home_hamburger.jpg" alt="Delicious burger">
+                        <img src="./assets/home_hamburger.jpg" alt="Delicious burger">
                     </div>
                 </div>
             </div>
             <div class="right-column">
                 <div class="image-container">
                     <div class="hero-image">
-                        <img src="../assets/home_hamburger.jpg" alt="Delicious burger">
+                        <img src="./assets/home_hamburger.jpg" alt="Delicious burger">
                     </div>
                 </div>
                 <div class="text-content">
@@ -610,6 +610,6 @@
         </div>
     </footer>
 
-    <script src="../script/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
