feat: update layout styles and add http-server dev dependency
- Adjust hero content and bottom question positioning in CSS
- Add ticker-section wrapper and improve ticker styling
- Add question-section with animations and styling
- Include http-server as dev dependency for local development

--- a/index.html
+++ b/index.html
@@ -94,8 +94,11 @@
                     </div>
             </div>
         </div>
-        
-        <!-- Scrolling Ticker -->
+
+    </div>
+
+    <!-- Scrolling Ticker -->
+    <div class="ticker-section">
         <div class="ticker-container">
             <div class="ticker">
                 <div class="ticker-content">
