feat(ui): update navbar layout and improve food text animation
- Simplify navbar structure by removing unnecessary container divs
- Add new smile.png asset and replace emoji with image
- Enhance eye animation with specific left/right classes
- Adjust cheek styling and positioning for better visual effect

--- a/index.html
+++ b/index.html
@@ -14,28 +14,24 @@
         <div class="homepage">
             <!-- Navbar -->
             <nav class="navbar" id="navbar">
-                <div class="container">
-                    <div class="row">
-                        <div class="logo">
-                            <img src="./assets/logo-white-retina.png" alt="Elementra">
-                        </div>
-                        <div class="menu-social-container">
-                            <div class="menu">
-                                <a href="#">Home</a>
-                                <a href="#">About Us</a>
-                                <a href="#">Our Menu</a>
-                                <a href="#">Blog</a>
-                                <a href="#">Book Now</a>
-                            </div>
-                            <div class="social-icons">
-                                <a href="#" class="social-link">
-                                    <i class="bi bi-twitter-x"></i>
-                                </a>
-                                <a href="#" class="social-link">
-                                    <i class="bi bi-instagram"></i>
-                                </a>
-                            </div>
-                        </div>
+                <div class="logo">
+                    <img src="./assets/logo-white-retina.png" alt="Elementra">
+                </div>
+                <div class="menu-social-container">
+                    <div class="menu">
+                        <a href="#">Home</a>
+                        <a href="#">About Us</a>
+                        <a href="#">Our Menu</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Book Now</a>
+                    </div>
+                    <div class="social-icons">
+                        <a href="#" class="social-link">
+                            <i class="bi bi-twitter-x"></i>
+                        </a>
+                        <a href="#" class="social-link">
+                            <i class="bi bi-instagram"></i>
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -66,16 +62,16 @@
                             
                             <div class="food-text">
                                 <span class="letter-5" style="margin-right: 0.2em;">F</span>
-                                <span class="eye-letter letter-6">
+                                <span class="eye-letter letter-6 left-eye">
                                     <span class="eye-text">O</span>
-                                    <div class="eye-in-letter">
+                                    <div class="eye-in-letter left-eye-ball">
                                         <div class="eyeball-in-letter"></div>
                                     </div>
                                     <div class="cheek left-cheek"></div>
                                 </span>
-                                <span class="eye-letter letter-7">
+                                <span class="eye-letter letter-7 right-eye">
                                     <span class="eye-text">O</span>
-                                    <div class="eye-in-letter">
+                                    <div class="eye-in-letter right-eye-ball">
                                         <div class="eyeball-in-letter"></div>
                                     </div>
                                     <div class="cheek right-cheek"></div>
@@ -89,7 +85,7 @@
 
                     <!-- Bottom Question -->
                     <div class="bottom-question">
-                        <span class="emoji">😊</span>
+                        <img src="./assets/smile.png" alt="Smile" class="emoji-img">
                         <span>WHAT DO YOU FEEL LIKE EATING TODAY?</span>
                     </div>
             </div>
