feat: implement dynamic ticker and improve layout styling
- Add dynamic food items ticker with JavaScript
- Update layout styling for better responsiveness
- Replace static images with new assets
- Improve grid system and container widths

--- a/index.html
+++ b/index.html
@@ -98,54 +98,7 @@
         <div class="ticker-container">
             <div class="ticker">
                 <div class="ticker-content">
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
-                    <span>🍕 PIZZA</span>
+                    <!-- İçerik JavaScript ile dinamik olarak oluşturulacak -->
                 </div>
             </div>
         </div>
@@ -154,13 +107,16 @@
     <div class="content-section">
         <div class="content-row">
             <div class="left-column">
+                <!-- Başlık Alanı -->
                 <div class="text-content">
                     <div class="section-header">
                         <div class="quality-badge">DELICIOUS MEALS WITH QUALITY</div>
                         <div class="decorative-lines">
-                            <div class="line"></div>
-                            <div class="line"></div>
-                            <div class="line"></div>
+                            <svg width="60" height="20" viewBox="0 0 60 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5 10 Q15 5 25 10 T45 10" stroke="#333" stroke-width="2" fill="none"/>
+                                <path d="M10 15 Q20 10 30 15 T50 15" stroke="#333" stroke-width="1.5" fill="none"/>
+                                <path d="M8 5 Q18 2 28 5 T48 5" stroke="#333" stroke-width="1" fill="none"/>
+                            </svg>
                         </div>
                     </div>
                     <h2 class="about-title">FAST, RELIABLE AND MADE WITH LOVE</h2>
@@ -171,31 +127,23 @@
                         Our mission is to serve fresh, flavorful food that not only delights our customers but also supports a healthier planet. We are dedicated to promoting sustainability through responsible sourcing, reducing waste, and implementing eco-friendly practices.
                     </p>
                 </div>
-                <div class="image-container">
+                <!-- Alt Burger Görseli -->
+                <div class="image-container small-burger">
                     <div class="burger-image">
-                        <img src="./assets/home_hamburger.jpg" alt="Delicious burger">
+                        <img src="./assets/2.jpg" alt="Delicious burger in hand">
                     </div>
                 </div>
             </div>
             <div class="right-column">
-                <div class="image-container">
+                <!-- Büyük Kadın Hamburger Görseli -->
+                <div class="image-container main-hero">
                     <div class="hero-image">
-                        <img src="./assets/home_hamburger.jpg" alt="Delicious burger">
+                        <img src="./assets/1.jpg" alt="Woman enjoying burger">
                     </div>
+
                 </div>
-                <div class="text-content">
-                    <div class="feature-icon">
-                        <div class="burger-icon">
-                            <div class="burger-text">BURGERS</div>
-                            <div class="simple-face">
-                                <div class="face-eyes">
-                                    <div class="eye"></div>
-                                    <div class="eye"></div>
-                                </div>
-                                <div class="face-mouth"></div>
-                            </div>
-                        </div>
-                    </div>
+                <!-- Alt Açıklama Metni -->
+                <div class="text-content bottom-text">
                     <p class="feature-description">
                         We prioritize quality and sustainability, ensuring that every meal reflects our commitment to excellence. Founded in 2020, we have quickly become a go-to destination for families and individuals seeking satisfying meals.
                     </p>
