feat: update assets and refine menu section styling
- Add new food and brand images to assets directory
- Simplify menu item hover effects and adjust spacing
- Update image references in HTML to use new assets
- Improve responsive design for menu sections

--- a/index.html
+++ b/index.html
@@ -162,28 +162,28 @@
             <div class="menu-grid">
                 <div class="menu-item">
                     <div class="menu-image">
-                        <img src="../assets/home_hamburger.jpg" alt="Gourmet Burgers">
+                        <img src="./assets/Gourmet Burgers.webp" alt="Gourmet Burgers">
                     </div>
                     <h3 class="menu-item-title">GOURMET BURGERS</h3>
                     <div class="menu-price">$26</div>
                 </div>
                 <div class="menu-item">
                     <div class="menu-image">
-                        <img src="../assets/home_hamburger.jpg" alt="Fried Chicken">
+                        <img src="./assets/Fried Chicken.png" alt="Fried Chicken">
                     </div>
                     <h3 class="menu-item-title">FRIED CHICKEN</h3>
                     <div class="menu-price">$19</div>
                 </div>
                 <div class="menu-item">
                     <div class="menu-image">
-                        <img src="../assets/home_hamburger.jpg" alt="Gourmet Burgers">
+                        <img src="./assets/Gourmet Burgers 2.png" alt="Gourmet Burgers">
                     </div>
                     <h3 class="menu-item-title">GOURMET BURGERS</h3>
                     <div class="menu-price">$12</div>
                 </div>
                 <div class="menu-item">
                     <div class="menu-image">
-                        <img src="../assets/home_hamburger.jpg" alt="Healthy Salads">
+                        <img src="./assets/Healthy Salads.png" alt="Healthy Salads">
                     </div>
                     <h3 class="menu-item-title">HEALTHY SALADS</h3>
                     <div class="menu-price">$25</div>
@@ -213,7 +213,7 @@
                 <div class="category-item image-card">
                     <div class="category-content">
                         <div class="category-image">
-                            <img src="../assets/home_hamburger.jpg" alt="American Food">
+                            <img src="./assets/Categories/hamburger.jpg" alt="American Food">
                         </div>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
                 <div class="category-item image-card">
                     <div class="category-content">
                         <div class="category-image">
-                            <img src="../assets/home_hamburger.jpg" alt="Italian Food">
+                            <img src="./assets/Categories/pizza.jpg" alt="Italian Food">
                         </div>
                     </div>
                 </div>
@@ -239,7 +239,7 @@
                 <div class="category-item image-card">
                     <div class="category-content">
                         <div class="category-image">
-                            <img src="../assets/home_hamburger.jpg" alt="Mexican Food">
+                            <img src="./assets/Categories/taco.jpg" alt="Mexican Food">
                         </div>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                 <div class="category-item image-card">
                     <div class="category-content">
                         <div class="category-image">
-                            <img src="../assets/home_hamburger.jpg" alt="Asian Food">
+                            <img src="./assets/Categories/pasta.jpg" alt="Asian Food">
                         </div>
                     </div>
                 </div>
@@ -289,7 +289,7 @@
                 <div class="menu-row">
                     <div class="menu-item-detailed">
                         <div class="menu-item-image">
-                            <img src="../assets/home_hamburger.jpg" alt="Gourmet Burgers">
+                            <img src="./assets/deliciousfood/GourmetBurgers.jpg" alt="Gourmet Burgers">
                         </div>
                         <div class="menu-item-info">
                             <h3 class="menu-item-name">GOURMET BURGERS</h3>
@@ -299,11 +299,11 @@
                     </div>
                     <div class="menu-item-detailed">
                         <div class="menu-item-image">
-                            <img src="../assets/home_hamburger.jpg" alt="Gourmet Burgers">
+                            <img src="./assets/deliciousfood/HealthyPanini.jpg" alt="Healthy Panini">
                         </div>
                         <div class="menu-item-info">
-                            <h3 class="menu-item-name">GOURMET BURGERS</h3>
-                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                            <h3 class="menu-item-name">HEALTHY PANINI</h3>
+                            <p class="menu-item-desc">Fresh vegetables and premium meats.</p>
                         </div>
                         <div class="menu-item-price">$24</div>
                     </div>
@@ -311,21 +311,21 @@
                 <div class="menu-row">
                     <div class="menu-item-detailed">
                         <div class="menu-item-image">
-                            <img src="../assets/home_hamburger.jpg" alt="Healthy Panini">
+                            <img src="./assets/deliciousfood/DeliciousPasta.jpg" alt="Delicious Pasta">
                         </div>
                         <div class="menu-item-info">
-                            <h3 class="menu-item-name">HEALTHY PANINI</h3>
-                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                            <h3 class="menu-item-name">DELICIOUS PASTA</h3>
+                            <p class="menu-item-desc">Homemade pasta with rich sauce.</p>
                         </div>
                         <div class="menu-item-price">$29</div>
                     </div>
                     <div class="menu-item-detailed">
                         <div class="menu-item-image">
-                            <img src="../assets/home_hamburger.jpg" alt="Hot Tacko">
+                            <img src="./assets/deliciousfood/HotTacko.jpg" alt="Hot Tacko">
                         </div>
                         <div class="menu-item-info">
                             <h3 class="menu-item-name">HOT TACKO</h3>
-                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                            <p class="menu-item-desc">Spicy and flavorful Mexican style.</p>
                         </div>
                         <div class="menu-item-price">$32</div>
                     </div>
@@ -333,21 +333,21 @@
                 <div class="menu-row">
                     <div class="menu-item-detailed">
                         <div class="menu-item-image">
-                            <img src="../assets/home_hamburger.jpg" alt="Delicious Pasta">
+                            <img src="./assets/deliciousfood/GourmetBurgers1.jpg" alt="Premium Burger">
                         </div>
                         <div class="menu-item-info">
-                            <h3 class="menu-item-name">DELICIOUS PASTA</h3>
-                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                            <h3 class="menu-item-name">PREMIUM BURGER</h3>
+                            <p class="menu-item-desc">Double patty with special sauce.</p>
                         </div>
                         <div class="menu-item-price">$19</div>
                     </div>
                     <div class="menu-item-detailed">
                         <div class="menu-item-image">
-                            <img src="../assets/home_hamburger.jpg" alt="Chicken Nuggets">
+                            <img src="./assets/deliciousfood/ChickenNuggets.jpg" alt="Chicken Nuggets">
                         </div>
                         <div class="menu-item-info">
                             <h3 class="menu-item-name">CHICKEN NUGGETS</h3>
-                            <p class="menu-item-desc">Crafted with fresh, local ingredients.</p>
+                            <p class="menu-item-desc">Crispy golden chicken pieces.</p>
                         </div>
                         <div class="menu-item-price">$12</div>
                     </div>
@@ -363,22 +363,22 @@
     <div class="brands-section">
         <div class="brands-container">
             <div class="brand-logo">
-                <img src="../assets/logo-white-retina.png" alt="Dr Pepper">
+                <img src="./assets/pdr.webp" alt="Dr Pepper">
             </div>
             <div class="brand-logo">
-                <img src="../assets/logo-white-retina.png" alt="Heinz">
+                <img src="./assets/heinz.webp" alt="Heinz">
             </div>
             <div class="brand-logo">
-                <img src="../assets/logo-white-retina.png" alt="Coca Cola">
+                <img src="./assets/cola.webp" alt="Coca Cola">
             </div>
             <div class="brand-logo">
-                <img src="../assets/logo-white-retina.png" alt="Hellmanns">
+                <img src="./assets/hellmans.webp" alt="Hellmanns">
             </div>
             <div class="brand-logo">
-                <img src="../assets/logo-white-retina.png" alt="Pepsi">
+                <img src="./assets/pepsi.webp" alt="Pepsi">
             </div>
             <div class="brand-logo">
-                <img src="../assets/logo-white-retina.png" alt="Sprite">
+                <img src="./assets/siprite.webp" alt="Sprite">
             </div>
         </div>
     </div>
@@ -402,10 +402,10 @@
     <div class="square-images-section">
         <div class="square-images-container">
             <div class="square-image-card">
-                <img src="../assets/home_hamburger.jpg" alt="Juicy Burger">
+                <img src="./assets/juicyburger.png" alt="Juicy Burger">
             </div>
             <div class="square-image-card">
-                <img src="../assets/home_hamburger.jpg" alt="Chicken Nuggets">
+                <img src="./assets/chickennugets.png" alt="Chicken Nuggets">
             </div>
         </div>
     </div>
