feat: optimize animations and improve footer layout
- Replace scroll-based animations with Intersection Observer for better performance
- Add optimized animation keyframes and staggered delays for smoother transitions
- Redesign footer layout with logo and improved spacing
- Simplify installation instructions in README
- Add new assets for footer and logo

--- a/index.html
+++ b/index.html
@@ -111,13 +111,6 @@
                 <div class="text-content">
                     <div class="section-header">
                         <div class="quality-badge">DELICIOUS MEALS WITH QUALITY</div>
-                        <div class="decorative-lines">
-                            <svg width="60" height="20" viewBox="0 0 60 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M5 10 Q15 5 25 10 T45 10" stroke="#333" stroke-width="2" fill="none"/>
-                                <path d="M10 15 Q20 10 30 15 T50 15" stroke="#333" stroke-width="1.5" fill="none"/>
-                                <path d="M8 5 Q18 2 28 5 T48 5" stroke="#333" stroke-width="1" fill="none"/>
-                            </svg>
-                        </div>
                     </div>
                     <h2 class="about-title">FAST, RELIABLE AND MADE WITH LOVE</h2>
                     <p class="about-description">
@@ -471,21 +464,23 @@
             <div class="footer-main">
                 <!-- Top Row: Slogan and Mascot -->
                  <div class="footer-slogan-row">
-                     <div class="footer-slogan-text">
-                         <h2>Elementra</h2>
-                     </div>
-                     <div class="footer-slogan-right">
+                     <div class="footer-slogan-left">
+                         <img src="./assets/logo-white-retina.png" alt="Elementra" class="footer-logo-img">
                          <h2>WE ARE CONSIDERED THE<br>KINGS OF FAST FOOD</h2>
                      </div>
+                     <div class="footer-slogan-right">
+                         <img src="./assets/footer.png" alt="Footer Image" class="footer-image">
+                     </div>
                  </div>
+                
+                 <!-- Divider Line -->
+                 <div class="footer-divider"></div>
                 
                 <!-- Bottom Row: Four Columns -->
                 <div class="footer-info-grid">
                     <!-- Column 1: Brand and CTA -->
                     <div class="footer-brand">
-                        <div class="footer-logo">
-                            <h3>Elementra</h3>
-                        </div>
+
                         <div class="footer-mission">
                             <p>WE PROUDLY SERVE FRESH, FLAVORFUL FAST FOOD WHILE PRIORITIZING SUSTAINABILITY AND FOSTERING A STRONG SENSE OF COMMUNITY WELL-BEING</p>
                         </div>
